--- a/mul1.html
+++ b/mul1.html
@@ -4,19 +4,29 @@
   font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
 .tg th{background-color:#409cff;border-color:#9ABAD9;border-style:solid;border-width:1px;color:#fff;
   font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-baqh{text-align:center;vertical-align:top}
 .tg .tg-c3ow{border-color:inherit;text-align:center;vertical-align:top}
+.tg .tg-krsw{background-color:#409cff;text-align:center;vertical-align:top}
 </style>
 <table class="tg">
 <thead>
   <tr>
-    <th class="tg-c3ow">컴퓨터공학</th>
-    <th class="tg-c3ow">컴퓨터과학</th>
+    <th class="tg-c3ow">정보의 디지털화</th>
+    <th class="tg-c3ow">정보의 통합</th>
   </tr>
 </thead>
 <tbody>
   <tr>
-    <td class="tg-c3ow">가격 대비 성능 특성이 좋은 컴퓨팅<br>엔진을 만들기 위해 하드웨어와<br>소프트웨어 요소의 조립에 중점</td>
-    <td class="tg-c3ow">현재의 기술에 덜 의존적인 방식으로<br>주어진 문제에 대한 해결책의<br>효율성과 실현 가능성에 보다 중점</td>
+    <td class="tg-c3ow">멀티미디어 데이터를<br>컴퓨터에서 사용하기<br>위해서는 <span style="font-weight:bold">디지털화</span>가 필요 </td>
+    <td class="tg-c3ow">효과적인 정보 전달을<br>위해서는멀 티미디어<br><span style="font-weight:bold">데이터를 통합</span>하여 사용</td>
+  </tr>
+  <tr>
+    <td class="tg-krsw"><span style="color:#FFF">정보의 상호작용</span></td>
+    <td class="tg-krsw"><span style="color:#FFF">정보의 공유</span></td>
+  </tr>
+  <tr>
+    <td class="tg-baqh">개별 사용자의 요구에<br>맞게 <span style="font-weight:bold">원하는 형태</span>로<br>데이터를 구성</td>
+    <td class="tg-baqh">인터넷으로 인한 정보의<br>독점이 없어지고 서로<br>연결된 <span style="font-weight:bold">열린 지식</span> 형태</td>
   </tr>
 </tbody>
 </table>
