--- a/mul1.html
+++ b/mul1.html
@@ -17,16 +17,16 @@
 </thead>
 <tbody>
   <tr>
-    <td class="tg-c3ow">멀티미디어 데이터를<br>컴퓨터에서 사용하기<br>위해서는 <span style="font-weight:bold">디지털화</span>가 필요 </td>
-    <td class="tg-c3ow">효과적인 정보 전달을<br>위해서는멀 티미디어<br><span style="font-weight:bold">데이터를 통합</span>하여 사용</td>
+    <td class="tg-c3ow">멀티미디어 데이터를 컴퓨터에서<br>사용하기 위해서는 <span style="font-weight:bold">디지털화</span>가 필요 </td>
+    <td class="tg-c3ow">효과적인 정보 전달을 위해서는<br>멀티미디어 <span style="font-weight:bold">데이터를 통합</span>하여 사용</td>
   </tr>
   <tr>
     <td class="tg-krsw"><span style="color:#FFF">정보의 상호작용</span></td>
     <td class="tg-krsw"><span style="color:#FFF">정보의 공유</span></td>
   </tr>
   <tr>
-    <td class="tg-baqh">개별 사용자의 요구에<br>맞게 <span style="font-weight:bold">원하는 형태</span>로<br>데이터를 구성</td>
-    <td class="tg-baqh">인터넷으로 인한 정보의<br>독점이 없어지고 서로<br>연결된 <span style="font-weight:bold">열린 지식</span> 형태</td>
+    <td class="tg-baqh">개별 사용자의 요구에 맞게<br><span style="font-weight:bold">원하는 형태</span>로 데이터를 구성</td>
+    <td class="tg-baqh">인터넷으로 인한 정보의 독점이 없어지고<br>서로 연결된 <span style="font-weight:bold">열린 지식</span> 형태</td>
   </tr>
 </tbody>
 </table>
