--- a/cpp2.html
+++ b/cpp2.html
@@ -5,6 +5,7 @@
 .tg th{background-color:#409cff;border-color:#9ABAD9;border-style:solid;border-width:1px;color:#fff;
   font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
 .tg .tg-c3ow{border-color:inherit;text-align:center;vertical-align:top}
+.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
 </style>
 <table class="tg">
 <thead>
@@ -15,8 +16,8 @@
 </thead>
 <tbody>
   <tr>
-    <td class="tg-c3ow"> char  int  short <br>long  bool  ...</td>
-    <td class="tg-c3ow">&nbsp;&nbsp;float&nbsp;&nbsp;double&nbsp;&nbsp;<br>long double</td>
+    <td class="tg-0pky">char : 문자저장<br>int : 정수<br>short : 정수<br>long : 정수<br>bool : 참거짓<br>...</td>
+    <td class="tg-0pky">float<br>double  <br>long double&nbsp;&nbsp;&nbsp;&nbsp;</td>
   </tr>
 </tbody>
 </table>
