--- a/cpp2_2.html
+++ b/cpp2_2.html
@@ -21,7 +21,7 @@
     <td class="tg-0pky">10진수 int형 상수</td>
   </tr>
   <tr>
-    <td class="tg-0lax"><span style="font-weight:bold">0</span>b10011111</td>
+    <td class="tg-0lax"><span style="font-weight:bold">0b</span>10011111</td>
     <td class="tg-0lax">2진수 int형 상수</td>
   </tr>
   <tr>
