--- a/cpp2_4.html
+++ b/cpp2_4.html
@@ -22,11 +22,11 @@
     <td class="tg-0pky">문자 'A' (ASCII 코드에 해당되는 정수 65와 동일)</td>
   </tr>
   <tr>
-    <td class="tg-baqh">'\101'</td>
+    <td class="tg-baqh">'<span style="font-weight:bold">\</span>101'</td>
     <td class="tg-0lax">'A'와 동일함 (65의 8진수 표현)</td>
   </tr>
   <tr>
-    <td class="tg-baqh">'\x41'</td>
+    <td class="tg-baqh">'<span style="font-weight:bold">\x</span>41'</td>
     <td class="tg-0lax">'A'와 동일함 (65의 16진수 표현)</td>
   </tr>
 </tbody>
