--- a/cpp2_7.html
+++ b/cpp2_7.html
@@ -15,8 +15,8 @@
     <th class="tg-c3ow" colspan="2">실행 결과</th>
   </tr>
   <tr>
-    <th class="tg-hafo">a의 값</th>
-    <th class="tg-hafo">b의 값</th>
+    <th class="tg-hafo"><span style="color:#000">a의 값</span></th>
+    <th class="tg-hafo"><span style="color:#000">b의 값</span></th>
   </tr>
 </thead>
 <tbody>
