--- a/dday.html
+++ b/dday.html
@@ -80,7 +80,7 @@ body{
 
 <div id="timer">
 <blockquote>
-<p style="font-size: 130%;"> 2022년 1학기 형성평가기간 </p>
+<p style="font-size: 130%;"> 2022년 2학년 1학기 형성평가기간 </p>
 </blockquote>
     <div class="days">
         <div id="days" class="numbers "> </div>days</div>
@@ -92,7 +92,7 @@ body{
 </body>
 <script>
     const year = new Date().getFullYear();
-const myDate = new Date('Jun 12, 2022 23:59:59');
+const myDate = new Date('Jun 19, 2022 23:59:59');
 console.log(myDate);
 
 // countdown
