--- a/dday_mid.html
+++ b/dday_mid.html
@@ -88,7 +88,7 @@ body{
 
 <div id="timer">
   <blockquote>
-  <p style="font-size: 130%;"> 2022년 1학기 중간과제 </p>
+  <p style="font-size: 130%;"> 2022년 1학기 기말고사 </p>
   </blockquote>
     <div class="days">
         <div id="days" class="numbers "> </div>days</div>
@@ -105,7 +105,7 @@ body{
 </body>
 <script>
     const year = new Date().getFullYear();
-const myDate = new Date('Apr 15, 2022 18:00:00');
+const myDate = new Date('Jun 18, 2022 14:00:00');
 console.log(myDate);
 
 // countdown
